URLDecoder for Windows